Fix for bug 405128 (Remove some nsDeque use from cycle collector). r/sr=dbaron, a=beltzner.